# TolCat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy-to-target.ps1  mod.cmake  unity.cmake
Preloader/include/: command_line.hpp  error_handling.hpp  launch_flags.hpp  sanity_checks.hpp
Preloader/src/: command_line.cpp  error_handling.cpp  launch_flags.cpp  main.cpp  sanity_checks.cpp
Proxy/: main.cpp  proxy.cpp  version.def
TolCat/include/: errors.hpp  files.hpp  gluon_logger.hpp  launch_flags.hpp  logger.hpp  tolcat_config.hpp
TolCat/src/: errors.cpp  files.cpp  gluon_logger.cpp  logger.cpp  main.cpp
